# walk-n-talk-rs

./: .gitignore  Cargo.toml  README.md
components/: Cargo.toml
components/src/: animation.rs  interaction.rs  lib.rs  movable.rs  npc.rs  person.rs  speech_bubble.rs
src/: animation.rs  interaction.rs  main.rs  movable.rs  npc.rs  person.rs  player.rs  speech_bubble.rs
systems/: cargo.toml
systems/src/: animation.rs  background.rs  camera.rs  debug.rs  interaction.rs  lib.rs  movable.rs  npc.rs  person.rs  player.rs  speech_bubble.rs
