[workspace]
resolver = "2"
members = ["systems", "components"]

[package]
name = "walk-n-talk-rs"
version = "0.1.0"
authors = ["Zoee Silcock <mrzoee@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
components = { path = "components" }
systems = { path = "systems" }
hot-lib-reloader = { version = "0.7.0", optional = true }

[features]
default = []
dynamic = ["bevy/dynamic_linking"]
reload = [
  "dep:hot-lib-reloader",
  "components/dynamic",
  "bevy/dynamic_linking",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
